# frontend_app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: CI_CD_pipeline.yml
app/: app.py  data_utils.py
app/assets/: style.css
frontend_app/: app.py
frontend_app/app_utils/: data_utils.py  logging_utils.py
frontend_app/assets/: style.css
frontend_app/utils/: data_utils.py
